--- a/CardWorkout/CardWorkout/Base.lproj/Main.storyboard
+++ b/CardWorkout/CardWorkout/Base.lproj/Main.storyboard
@@ -17,14 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="10C" translatesAutoresizingMaskIntoConstraints="NO" id="qts-zI-ZtC">
-                                <rect key="frame" x="70" y="147" width="250" height="350"/>
+                                <rect key="frame" x="70" y="172" width="250" height="350"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="350" id="Ham-pR-dUJ"/>
                                     <constraint firstAttribute="width" constant="250" id="P7K-Ul-D8e"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36g-Yc-qTk">
-                                <rect key="frame" x="65" y="547" width="260" height="50"/>
+                                <rect key="frame" x="65" y="572" width="260" height="50"/>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="260" id="che-uO-a8R"/>
@@ -35,9 +35,12 @@
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="stopButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HCD-F7-gs8"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDA-Fk-lcW">
-                                <rect key="frame" x="65" y="617" width="115" height="50"/>
+                                <rect key="frame" x="65" y="642" width="115" height="50"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="115" id="8q4-nz-lg1"/>
@@ -48,9 +51,12 @@
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="restartButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZtL-nf-WdS"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ycx-nH-JK4">
-                                <rect key="frame" x="210" y="617" width="115" height="50"/>
+                                <rect key="frame" x="210" y="642" width="115" height="50"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="115" id="8Hn-8A-Nek"/>
@@ -61,6 +67,9 @@
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="rulesButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YiP-Uu-9b4"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -69,13 +78,19 @@
                             <constraint firstItem="TDA-Fk-lcW" firstAttribute="top" secondItem="36g-Yc-qTk" secondAttribute="bottom" constant="20" id="5Vc-7M-kcd"/>
                             <constraint firstItem="qts-zI-ZtC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Aix-di-yUE"/>
                             <constraint firstItem="ycx-nH-JK4" firstAttribute="centerY" secondItem="TDA-Fk-lcW" secondAttribute="centerY" id="Aqb-TB-rE6"/>
-                            <constraint firstItem="qts-zI-ZtC" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="Kag-VN-4Jj"/>
+                            <constraint firstItem="qts-zI-ZtC" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-75" id="Kag-VN-4Jj"/>
                             <constraint firstItem="TDA-Fk-lcW" firstAttribute="leading" secondItem="36g-Yc-qTk" secondAttribute="leading" id="NYy-mC-Mut"/>
                             <constraint firstItem="ycx-nH-JK4" firstAttribute="trailing" secondItem="36g-Yc-qTk" secondAttribute="trailing" id="OIS-RQ-oiS"/>
                             <constraint firstItem="36g-Yc-qTk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="d0Z-tt-kcU"/>
                             <constraint firstItem="36g-Yc-qTk" firstAttribute="top" secondItem="qts-zI-ZtC" secondAttribute="bottom" constant="50" id="oIX-yU-9hA"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cardImageView" destination="qts-zI-ZtC" id="pXd-z7-gN6"/>
+                        <outletCollection property="buttons" destination="36g-Yc-qTk" collectionClass="NSMutableArray" id="h2f-Wu-2yO"/>
+                        <outletCollection property="buttons" destination="TDA-Fk-lcW" collectionClass="NSMutableArray" id="5tX-Bf-W9c"/>
+                        <outletCollection property="buttons" destination="ycx-nH-JK4" collectionClass="NSMutableArray" id="6GD-5e-jCa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
