new version button with icons

--- a/CardWorkout/CardWorkout/Base.lproj/Main.storyboard
+++ b/CardWorkout/CardWorkout/Base.lproj/Main.storyboard
@@ -23,49 +23,49 @@
                                     <constraint firstAttribute="width" constant="250" id="P7K-Ul-D8e"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36g-Yc-qTk">
-                                <rect key="frame" x="65" y="572" width="260" height="50"/>
-                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36g-Yc-qTk">
+                                <rect key="frame" x="65" y="572" width="270" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="260" id="che-uO-a8R"/>
+                                    <constraint firstAttribute="width" constant="280" id="che-uO-a8R"/>
                                     <constraint firstAttribute="height" constant="50" id="tO3-D2-dOw"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Stop!">
+                                <buttonConfiguration key="configuration" style="tinted" image="stop.circle" catalog="system" title="Stop!" imagePadding="4" cornerStyle="medium">
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseForegroundColor" systemColor="systemRedColor"/>
+                                    <color key="baseBackgroundColor" systemColor="systemRedColor"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="stopButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HCD-F7-gs8"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDA-Fk-lcW">
-                                <rect key="frame" x="65" y="642" width="115" height="50"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDA-Fk-lcW">
+                                <rect key="frame" x="65" y="642" width="130" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="115" id="8q4-nz-lg1"/>
+                                    <constraint firstAttribute="width" constant="125" id="8q4-nz-lg1"/>
                                     <constraint firstAttribute="height" constant="50" id="gt1-BU-XHY"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Restart">
+                                <buttonConfiguration key="configuration" style="tinted" image="arrow.clockwise" catalog="system" title="Restart" imagePadding="2" cornerStyle="medium">
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseForegroundColor" systemColor="systemGreenColor"/>
+                                    <color key="baseBackgroundColor" systemColor="systemGreenColor"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="restartButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZtL-nf-WdS"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ycx-nH-JK4">
-                                <rect key="frame" x="210" y="642" width="115" height="50"/>
-                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ycx-nH-JK4">
+                                <rect key="frame" x="205" y="641" width="130" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="115" id="8Hn-8A-Nek"/>
+                                    <constraint firstAttribute="width" constant="125" id="8Hn-8A-Nek"/>
                                     <constraint firstAttribute="height" constant="50" id="n5d-8C-tSo"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Rules">
+                                <buttonConfiguration key="configuration" style="tinted" image="list.bullet.clipboard" catalog="system" title="Rules" imagePadding="4" cornerStyle="medium">
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseForegroundColor" systemColor="systemBlueColor"/>
+                                    <color key="baseBackgroundColor" systemColor="systemBlueColor"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="AHe-VD-AlK" kind="presentation" id="yUL-9q-pMt"/>
@@ -75,6 +75,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="ycx-nH-JK4" firstAttribute="leading" secondItem="TDA-Fk-lcW" secondAttribute="trailing" constant="30" id="186-a0-nej"/>
                             <constraint firstItem="TDA-Fk-lcW" firstAttribute="top" secondItem="36g-Yc-qTk" secondAttribute="bottom" constant="20" id="5Vc-7M-kcd"/>
                             <constraint firstItem="qts-zI-ZtC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Aix-di-yUE"/>
                             <constraint firstItem="ycx-nH-JK4" firstAttribute="centerY" secondItem="TDA-Fk-lcW" secondAttribute="centerY" id="Aqb-TB-rE6"/>
@@ -87,9 +88,6 @@
                     </view>
                     <connections>
                         <outlet property="cardImageView" destination="qts-zI-ZtC" id="pXd-z7-gN6"/>
-                        <outletCollection property="buttons" destination="36g-Yc-qTk" collectionClass="NSMutableArray" id="h2f-Wu-2yO"/>
-                        <outletCollection property="buttons" destination="TDA-Fk-lcW" collectionClass="NSMutableArray" id="5tX-Bf-W9c"/>
-                        <outletCollection property="buttons" destination="ycx-nH-JK4" collectionClass="NSMutableArray" id="6GD-5e-jCa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -149,6 +147,9 @@
     </scenes>
     <resources>
         <image name="10C" width="691" height="1056"/>
+        <image name="arrow.clockwise" catalog="system" width="113" height="128"/>
+        <image name="list.bullet.clipboard" catalog="system" width="103" height="128"/>
+        <image name="stop.circle" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
